--- a/todo/src/components/TodoForm.css
+++ b/todo/src/components/TodoForm.css
@@ -21,7 +21,7 @@ input {
 }
 
 button {
-    background-color: #fff;
+    background-color: rgb(195, 195, 195);
     color:rgb(15, 66, 148);
     text-decoration: none;
     padding: 1%;
@@ -48,16 +48,12 @@ h3 {
     width: 50%;
 }
 
-p {
-    text-align: center;
-    margin: auto;
-    text-transform: uppercase;
+.todos {
     padding: 2%;
     font-weight: bold;
     cursor: pointer;
-}
-
-.todos {
+    text-align: center;
+    text-transform: uppercase;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
